css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

a {
    text-decoration: none;
}

/* sezione main  */
main {
    height: calc(100vh - 100px);
    background-color: #000;
    position: relative;
}

#view-btns {
    position: fixed;
    top: 0;
    right: 0;
}

#view-btns .view-btn {
    background-color: #222326;
    margin: 8px 5px 0 0;
    padding: 5px 10px;
    display: inline-block;
}

#view-btns a {
    color: #dcdcdc;
}

#view-btns a:hover {
    color: #ffffff;
}

main section {    
    height: 100%;
    display: flex;
    justify-content: space-between;
    padding: 50px 0;
}

main section div {
    height: 100%;

}

/* frecce pagine */
.arrow {
    display: flex;
    align-items: center;
}

.arrow .page-arrow {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    font-size: 50px;
    padding: 0 10px;
    color: gray;
}

.arrow .page-arrow span {
    font-size: 20px;
    padding: 15px 0;
}

#active-arrow {
    color: #2ebaff;
}

/* immagini */
#portraits {
    width: 85%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between ;
    padding: 0;
    overflow: scroll;
}

    #portraits .photo {

        /* debug */
        width: 240px;
        height: 135px;
        padding: 10px;
        background-color: darkgoldenrod;
    }

    #portraits .photo img {
        object-fit: cover;
        max-width: 100%;
        /* padding: 10px; */
    }



/* sezione footer */

nav {
    height: 100px;
    color: #dcdcdc;
    background-color: #222326;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

nav div {
    display: flex;
}

nav div div {
    padding: 0 15px;
}

nav a {
    color: #dcdcdc;
}

nav a:hover {
    color: #ffffff;
}

nav i {
    padding: 10px 0;
    font-size: 26px;
}

nav .fa-chevron-up {
    font-size: 17px;
}

nav .icons-flex{
    display: flex;
    flex-direction: column;
    align-items: center;
}

#close {
    height: 100%;
    background-color: #4a4b4d;
    color: red;

    display: flex;
    align-items: center;
}

